core/test/org.ebayopensource.vjet.test.core.jstojava/testFiles/syntaxError/comma/OnlyComma.js
vjo.ctype('syntaxError.comma.OnlyComma') //< public
,
.props({
	,
})
.protos({
	
}),
.endType();
,